--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.1
   pull_down_button: ^0.10.2
+  firebase_core: ^3.13.0
+  firebase_analytics: ^11.4.5
+  firebase_crashlytics: ^4.3.5
   
 
 dev_dependencies:
